# trade-bot

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  agents.md  patch_app.py  patch_builders.py  patch_builders_fix.py  patch_builders_fix2.py  patch_composite.py  patch_dashboard_errors.py  patch_go_no_go.py  patch_go_no_go_fix.py  patch_readiness.py  patch_readiness_thresholds.py  patch_sample_size.py  patch_sample_size2.py  patch_test_campaign.py  patch_test_ops.py  patch_test_paper.py  patch_test_readiness.py  patch_test_readiness2.py  patch_test_readiness_final_fix.py  patch_tests.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: defaults.toml
deploy/: Dockerfile  PROFILES.md  docker-compose.dev.yml  docker-compose.yml  prometheus.yml
deploy/env/: prod-defaults.env  validation-overrides.env
docs/: ANALYTICS_MONITORING.md  DASHBOARD_MODES.md  DEMO_EXECUTION_ENGINE.md  DEMO_VALIDATION_CAMPAIGN_RUNBOOK.md  DIRECTIONAL_VENUE_PROOF_MATRIX.md  OPERATIONS_RUNBOOK.md  PAPER_EXECUTION_ENGINE.md  SHORT_STRATEGY_ROADMAP.md  SIGNAL_ENGINE.md  SMART_EXIT_ENGINE.md  STREAMING_FEATURE_ENGINE.md  TESTNET_E2E_PROOF_REPORT.md  TESTNET_SMOKE_TEST_REPORT.md  VALIDATION_24H_LONG_ONLY_CHECKLIST.md  VALIDATION_CAMPAIGN_REPORT.md  VERDICT.md
docs/templates/: VALIDATION_24H_REPORT_TEMPLATE.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
scripts/: README.md  collect_validation_snapshot.sh  compose_health_snapshot.py  migrate.py  poll_paper_snapshots.py  run_testnet_e2e_proof.py  smoke_bybit_demo.py  start_dashboard.sh  testnet_validation_dashboard.py  testnet_validation_preflight.ps1  testnet_validation_report.py  validate_data.py  validation_audit_runner.py  verify_binance_testnet_auth.py  verify_testnet_entry_logs.py
scripts/forensics/: README.md
scripts/ops_tools/: README.md  deploy_analytics_with_release.py
tests/: conftest.py
tests/analytics/: test_engine.py  (+3 more)
(+125 files in other folders)
