[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cte"
version = "0.1.0"
description = "Crypto Trading Engine – Production-grade event-driven trading system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "CTE Team" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.2.0",
    "asyncpg>=0.30.0",
    "websockets>=13.1",
    "aiohttp>=3.11.0",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
    "prometheus-client>=0.21.0",
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "tenacity>=9.0.0",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "fakeredis>=2.26.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "time-machine>=2.16.0",
]

[project.scripts]
cte = "cte.core.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cte"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cte"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/cte"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
